--- a/application/doitsu_technology_website/dtech_csr/index.html
+++ b/application/doitsu_technology_website/dtech_csr/index.html
@@ -7,7 +7,7 @@
     <title>D Tech • Website</title>
     <base data-trunk-public-url/>
     <link data-trunk href="./tailwind.css" rel="css"/>
-    <link data-trunk rel="rust" data-cargo-features="yew/csr" data-bin="dtech_ssr"/>
+    <link data-trunk rel="rust" data-cargo-features="yew/csr" data-bin="dtech_csr"/>
 </head>
 
 <body></body>
