--- a/application/doitsu_technology_website/dtech_csr/index.html
+++ b/application/doitsu_technology_website/dtech_csr/index.html
@@ -6,9 +6,17 @@
 
     <title>D Tech • Website</title>
     <base data-trunk-public-url/>
-    <link data-trunk href="./tailwind.css" rel="css"/>
+    <!--    <link data-trunk href="./tailwind.css" rel="css"/>-->
     <link data-trunk rel="rust" data-cargo-features="yew/csr" data-bin="dtech_csr"/>
+    <link data-trunk rel="tailwind-css" href="tailwind.css" />
 </head>
 
-<body></body>
+<body>
+
+<div class="container">
+
+</div>
+
+
+</body>
 </html>
