--- a/application/doitsu_technology_website/dtech_csr/index.html
+++ b/application/doitsu_technology_website/dtech_csr/index.html
@@ -10,6 +10,18 @@
         <link data-trunk rel="rust" data-cargo-features="yew/csr" data-bin="dtech_csr" />
         <link data-trunk rel="tailwind-css" href="tailwind.css" />
 
+        <link data-trunk rel="copy-file" href="node_modules/@material-tailwind/html/scripts/collapse.js" />
+        <link data-trunk rel="copy-file" href="node_modules/@material-tailwind/html/scripts/ripple.js" />
+        <link data-trunk rel="copy-file" href="node_modules/@material-tailwind/html/scripts/dialog.js" />
+        <link data-trunk rel="copy-file" href="node_modules/@material-tailwind/html/scripts/popover.js" />
+        <link data-trunk rel="copy-file" href="node_modules/@material-tailwind/html/scripts/tabs.js" />
+        <link data-trunk rel="copy-file" href="node_modules/@material-tailwind/html/scripts/tooltip.js" />
+        <link data-trunk rel="copy-file" href="node_modules/@material-tailwind/html/scripts/dismissible.js" />
+
+        <link data-trunk rel="copy-file" href="images/Doitsu-Tech-Logo-Rect.svg" />
+        <link data-trunk rel="copy-file" href="images/Doitsu-Tech-Logo-Square.svg" />
+        <link data-trunk rel="copy-file" href="images/grim-repo.jpg" />
+
         <!-- Material Icons Link -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="icon" />
 
